--- a/templates/components/messages.html
+++ b/templates/components/messages.html
@@ -1,9 +1,7 @@
 {% with messages = get_flashed_messages() %}
   {% if messages %}
-    <ul class=flashes>
     {% for message in messages %}
-      <li>{{ message }}</li>
+      <span>{{ message }}</span>
     {% endfor %}
-    </ul>
   {% endif %}
 {% endwith %}
