--- a/static/style.css
+++ b/static/style.css
@@ -12,7 +12,7 @@ body {
 
 header {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     width: 70%;
     background-color: #C1A782;
